fix: scroll flickering

--- a/dashboard/src/app/styles/normalize.scss
+++ b/dashboard/src/app/styles/normalize.scss
@@ -22,6 +22,7 @@ ul {
 
 html {
     scroll-behavior: smooth;
+    overflow: overlay;
 }
 
 ::-webkit-scrollbar {
